--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2212,107 +2212,107 @@ stories:
   domain: http://www.gpkmedia.com/
   link: https://gpkmedia.com/mom-tries-to-stop-deputies-from-arresting-son/
 images:
-- name: white-house-whitehouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-mucha-mult.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: border-fence-border-fence-on-hill-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-hot-spicy.jpg
-- name: wind-mills-windmills-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-blocks.jpg
-- name: machine-road-machine-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-plentiful.jpg
-- name: power-lines-power-lines-empty-space-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
-- name: old-gas-pumps-oldgaspumps-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-three.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-rain.jpg
-- name: dc-statue-dcstatue-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-marcel-duchamp.jpg
-- name: oldhouse-granaryfield-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
-- name: server-cloud-server-racks-door-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-marcel-duchamp.jpg
-- name: oldhotel-oldhotel-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-circuit.jpg
-- name: ellis-island-ellisisland-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: oldhouse-oldhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-collage.jpg
-- name: udnie-IMG_8358.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-internet-numbers.JPG
-- name: wind-mills-windmills-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
-- name: old-church-oldchurch-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-green-zuma.jpg
-- name: miamibeach-miamibeach-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-bright-sand.jpg
-- name: white-house-whitehouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-creativity.jpg
-- name: fence-fence-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: store-on-corner-store-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-spagetti-accident.jpg
-- name: udnie-IMG_4425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4425.jpg
-- name: server-cloud-server-racks-clouds-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-pablo-blue.jpg
-- name: lincoln-memorial-lincolnmemorial-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dry-skin.jpg
-- name: oldhouse-oldhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
-- name: mosaic-face-mosaic-face-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
-- name: oldbarn-oldbarn-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-rainbow-festival.jpg
-- name: store-on-corner-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
-- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-- name: flower-barbed-wire-flower-barbed-wire-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-far-away.jpg
-- name: mediterranean-mediterranean-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-ww2-dresden.jpg
-- name: aws-s3-stories-server-cloud1-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-feed-people.jpg
-- name: trucksilo-trucksilo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-post-modern.jpg
-- name: beach-clouds-lifeguard-beachclouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-wols.jpg
-- name: anza-borrego-desert-state-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/anza-borrego-desert-state-park.jpg
-- name: meadowbutterfly-meadow-butterfly-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colorful-dream.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
-- name: stories-36698086536-f214416faf-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36698086536-f214416faf-z.jpg
-- name: old-door-lock-old-door-lock-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
-- name: old-door-lock-old-door-lock-2-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-storm.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-- name: oldhousecars-house-old-cars-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-graham-sutherland.jpg
-- name: mistywoods-babyfoot-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-yellow-paper.jpg
+- name: old-door-lock-old-door-lock-2-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
+- name: capital-battle-capitolbattle-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
+- name: downtheline-downtheline-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
+- name: window-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+- name: yosemite-yosemite-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-rain.jpg
+- name: old-granary-field-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
+- name: abandonedbuildings_creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_creativity.jpg
+- name: hollywood-building-hollywood-building-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-attack-planes.jpg
+- name: rockingchair-rockingchair-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-brush.jpg
+- name: art-museum-art-museum-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
+- name: aws-s3-smithriver-smithriver-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
+- name: lincoln-memorial-lincolnmemorial.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial.jpg
+- name: oldcabin-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-missle.jpg
+- name: windowmountain-window-mountain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
+- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
+- name: old-cabin-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
+- name: old-barn-old-barn-1500-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: old-cabin-oldcabin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-marcel-duchamp.jpg
+- name: walled-garden-walled-garden-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
+- name: stories-christianity-under-construction-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
+- name: adam-smith-adam-smith-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
+- name: oldbarn-oldbarn-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
+- name: locked-up-steam-lock-up-steam-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-internet-numbers.jpg
+- name: legal-statue-legalstatue-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smoking-cigarette.jpg
+- name: yosemite-yosemite-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
+- name: white-house-whitehouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-storm.jpg
+- name: cargo-ship-cargo-ship-on-sea-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-missle.jpg
+- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
+- name: nyc-flag-nycflag-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-aqua.jpg
+- name: oldhouse-granaryfield-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
+- name: old-door-lock-old-door-lock-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
+- name: store-on-corner-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
+- name: christianity-christianity-under-construction-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
+- name: amusement-park-amusement-park-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+- name: oldhouse-oldhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-dali.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-dali.jpg
+- name: oldhotel-oldhotel-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
+- name: border-crossing-bordercrossing-blue-brush.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-brush.png
+- name: legal-statue-legalstatue-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
+- name: carry-load-carryload-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
+- name: gears-4882162452-fa3126b38d-b-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-plentiful.jpg
+- name: school-clouds-church-clouds-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
+- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
+- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
 ---
 Turkish Cypriots Investigating Blast In Breakaway North.&nbsp;Why Millennials May Be Conservatives At Heart.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;Walter Hagen's Northern Michigan.&nbsp;OptycNerd Drops Single Ahead Of The Westword Music Showcase.&nbsp;Lashley Wins By Six In Detroit For First Career Title.&nbsp;Resilience Defines Ag Community In Wake Of Natural Disasters.&nbsp;Helmet Maker Rounds Out Football Portfolio With New Headgear.&nbsp;
