--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2212,107 +2212,107 @@ stories:
   domain: http://www.gpkmedia.com/
   link: https://gpkmedia.com/mom-tries-to-stop-deputies-from-arresting-son/
 images:
-- name: old-door-lock-old-door-lock-2-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
-- name: capital-battle-capitolbattle-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
-- name: downtheline-downtheline-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-pond.jpg
-- name: window-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
-- name: yosemite-yosemite-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-rain.jpg
-- name: old-granary-field-granaryfield-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
-- name: abandonedbuildings_creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_creativity.jpg
-- name: hollywood-building-hollywood-building-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-attack-planes.jpg
-- name: rockingchair-rockingchair-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-brush.jpg
-- name: art-museum-art-museum-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: lincoln-memorial-lincolnmemorial.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial.jpg
-- name: oldcabin-store-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-missle.jpg
-- name: windowmountain-window-mountain-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
-- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
-- name: old-cabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
-- name: old-barn-old-barn-1500-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
-- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: old-cabin-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-marcel-duchamp.jpg
-- name: walled-garden-walled-garden-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
-- name: stories-christianity-under-construction-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
-- name: adam-smith-adam-smith-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
-- name: oldbarn-oldbarn-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
-- name: locked-up-steam-lock-up-steam-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-internet-numbers.jpg
+- name: fence-fence-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-circuit.jpg
+- name: old-house-oldhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+- name: stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-dark-dali.jpg
+- name: crow-crow-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-emily-carr.jpg
+- name: old-granary-field-oldhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-dresden.jpg
+- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
 - name: legal-statue-legalstatue-smoking-cigarette.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smoking-cigarette.jpg
-- name: yosemite-yosemite-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
-- name: white-house-whitehouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-storm.jpg
-- name: cargo-ship-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-missle.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
-- name: nyc-flag-nycflag-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-aqua.jpg
-- name: oldhouse-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
-- name: old-door-lock-old-door-lock-2-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
-- name: store-on-corner-store-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
-- name: christianity-christianity-under-construction-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
-- name: amusement-park-amusement-park-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
-- name: oldhouse-oldhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-dali.jpg
-- name: gears-4882162452-fa3126b38d-b-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-dali.jpg
-- name: oldhotel-oldhotel-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
-- name: border-crossing-bordercrossing-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-brush.png
-- name: legal-statue-legalstatue-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
+- name: docks-docks-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-light-dali.jpg
+- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
+- name: server-cloud-server-racks-clouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-alien-goggles.jpg
+- name: border-fence-border-fence-on-hill-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
+- name: windowmountain-window-mountain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-wols.jpg
+- name: supreme-court-supremecourt-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
+- name: nazi-invasion-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7831.jpg
+- name: catacombs-catacombs-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
+- name: locked-up-steam-lock-up-steam-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-space-pizza.jpg
+- name: border-crossing-bordercrossing-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-dream.png
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: dc-statue-dcstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-circuit.jpg
+- name: aws-s3-bluelake-bluelake-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-1200.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+- name: meadowbutterfly-meadow-butterfly.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: adam-smith-adam-smith-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
+- name: powerlines-power-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dry-skin.jpg
+- name: old-granary-field-oldhouse-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-bright-sand.jpg
+- name: paris-paris-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: blossombar-dry-skin-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-24-99.jpg
+- name: oldhouse-oldhouse-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
+- name: machine-road-machine-road-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
+- name: art-museum-art-museum-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smooth-ride.jpg
+- name: liberty-back-statue-liberty-back-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-smoking-cigarette.jpg
 - name: carry-load-carryload-sand-paper.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
-- name: gears-4882162452-fa3126b38d-b-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-plentiful.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+- name: downtown-trucksilo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-diego-rivera1.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-3.jpg
+- name: oldbarn-oldbarn-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-color.jpg
+- name: beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
+- name: machine-road-machine-road-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-attack-planes.jpg
+- name: old-church-oldchurch-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
+- name: flower-barbed-wire-flower-barbed-wire-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-plentiful.jpg
+- name: old-barn-old-barn-1500-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-umberto-bocc.jpg
+- name: containership-containership-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-color.jpg
+- name: school-clouds-church-clouds-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sand-paper.jpg
+- name: oldtrain-oldtrain-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-oily-mcoilface.jpg
+- name: paris-paris-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-blocks.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+- name: status-berlin-status-berlin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-far-away.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-creativity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-creativity.JPG
+- name: status-berlin-status-berlin-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-dream.jpg
 ---
 Turkish Cypriots Investigating Blast In Breakaway North.&nbsp;Why Millennials May Be Conservatives At Heart.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;Walter Hagen's Northern Michigan.&nbsp;OptycNerd Drops Single Ahead Of The Westword Music Showcase.&nbsp;Lashley Wins By Six In Detroit For First Career Title.&nbsp;Resilience Defines Ag Community In Wake Of Natural Disasters.&nbsp;Helmet Maker Rounds Out Football Portfolio With New Headgear.&nbsp;
